--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
+     "build": "npm run build --prefix ./client",
     "server":"nodemon server.js",
     "client":"npm start --prefix ./client",
     "dev": "concurrently \"npm run start\" \"npm run client\""
