--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "node server.js",
     "server":"nodemon server.js",
     "client":"npm start --prefix ./client",
-    "dev": "concurrently \"npm start\" \"npm run client\""
+    "client:build": "npm run build --prefix client",
+    "dev": "concurrently \"npm start\" \"npm run client\"",
+    "build": "npm run client:build"
   },
   "keywords": [],
   "author": "Ritwik",
