--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "scripts": {
     "start": "node server.js",
     "server":"nodemon server.js",
-    "client":"npm start --prefix ./client",
-    "client:build": "npm run build --prefix ./client",
+    "client":"npm start --prefix client",
+    "client:build": "npm run build --prefix client",
     "dev": "concurrently \"npm start\" \"npm run client\"",
     "build": "npm run client:build"
   },
